--- a/index.html
+++ b/index.html
@@ -275,6 +275,48 @@
         <div class="back">ILYSM....you always find this pic super cute...and i just love this fact...i love you MOSTEST</div>
       </div>
     </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (32).png"><div class="caption">Peak Amna</div></div>
+        <div class="back">This pic is one of my favorites..it's wayyy before our RS...but i just loved the way u sent it to me...it means a lot to me</div>
+      </div>
+    </div>
+      <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (34).jpg"><div class="caption">Discord Calls</div></div>
+        <div class="back">I remember you getting really really happy when i turned on my camera...and i loved the way u always kept ss of our calls</div>
+      </div>
+    </div>
+       <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (35).jpg"><div class="caption">Mustfa</div></div>
+        <div class="back">You once said that this is your favorite pic of me</div>
+      </div>
+    </div>
+       <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (36).jpg"><div class="caption">Bleach</div></div>
+        <div class="back">This is how the discord calls started..us watching bleach...one of the yummiest moments of our RSe</div>
+      </div>
+    </div>
+       <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (37).jpg"><div class="caption">Wear White</div></div>
+        <div class="back">Eid, and u told me to wear white....and u got really happy when i sent the snaps...ilysm</div>
+      </div>
+    </div>
+       <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (33).png"><div class="caption">You Are!</div></div>
+        <div class="back">First meetup...me saying that you're cute...one of the cutest moments in our RS</div>
+      </div>
+    </div>
+       <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (38).jpg"><div class="caption">Smol</div></div>
+        <div class="back">This is the day u called me cute for the first time..i got the name Orange Kitten...and u thought k i died </div>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -286,3 +328,4 @@
   </script>
 </body>
 </html>
+
