New imgaes added

--- a/index.html
+++ b/index.html
@@ -317,6 +317,79 @@
         <div class="back">This is the day u called me cute for the first time..i got the name Orange Kitten...and u thought k i died </div>
       </div>
     </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (39).jpg"><div class="caption">You with kuromi</div></div>
+        <div class="back">I love the way u always keep the kuromi with you...whenever u send snaps i look for it</div>
+      </div>
+    </div>
+ <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (40).jpg"><div class="caption">Chaako</div></div>
+        <div class="back">Just me being fully goofy for your smiles</div>
+      </div>
+    </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (41).jpg"><div class="caption">The order</div></div>
+        <div class="back">Drippy and extremly moody till i got u a shawarma ...i remember the very next day u came to me and said that i don't even love you </div>
+      </div>
+    </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (42).jpg"><div class="caption">heart</div></div>
+        <div class="back">You drew this heart with your nose and for me this is purely beautiful </div>
+      </div>
+    </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (43).jpg"><div class="caption">Aabi bukhara</div></div>
+        <div class="back">Peak bullying i remember us laughing like crazy on it..a beautiful moment </div>
+      </div>
+    </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (44).jpg"><div class="caption">The T-shirt</div></div>
+        <div class="back">When i saw u wearing my shirt na...i was left star struck..."the most beautiful girl and she's mine" </div>
+      </div>
+    </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (50).jpg"><div class="caption">Smol hands</div></div>
+        <div class="back">I remember the smile on ur face when u got to know that i actually brought the ring</div>
+      </div>
+    </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (45).jpg"><div class="caption">YT vids</div></div>
+        <div class="back">just me making sure that u get all of my content </div>
+      </div>
+    </div>
+
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (46).jpg"><div class="caption">The day i got slapped</div></div>
+        <div class="back">U had my snapchat and u took this pic..i saved it as a memorial for the day u slapped the shit outta me </div>
+      </div>
+    </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (47).jpg"><div class="caption">Pregnant!?</div></div>
+        <div class="back">IDK why i even did it...but when i saw u smile i just knew that i have to do this more often now </div>
+      </div>
+    </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (48).jpg"><div class="caption">Miss Amna the photographer</div></div>
+        <div class="back">I remember that i was hella insecure when u were taking this...but i was shocked how good of a pic u took</div>
+      </div>
+    </div>
+     <div class="polaroid" onclick="this.classList.toggle('flipped')">
+      <div class="inner">
+        <div class="front"><img src="PIC (49).jpg"><div class="caption">U naiyod for the first time</div></div>
+        <div class="back">Wottttt this is the first time i ever got a proof u naiyod </div>
+      </div>
+    </div>
   </div>
 
   <script>
